changed social icons color to #f0f6fc instead of brand colors

--- a/index.html
+++ b/index.html
@@ -20,35 +20,32 @@
       </p>
       <ul class="socials">
         <li>
-          <a href="mailto:poasare@icloud.com" class="email" target="_blank"
+          <a href="mailto:poasare@icloud.com" target="_blank"
             ><i class="bx bxs-envelope"></i
           ></a>
         </li>
         <li>
-          <a href="https://github.com/asarepok" class="github" target="_blank"
+          <a href="https://github.com/asarepok" target="_blank"
             ><i class="bx bxl-github"></i
           ></a>
         </li>
         <li>
-          <a href="https://twitter.com/asarepok" class="twttr" target="_blank"
+          <a href="https://twitter.com/asarepok" target="_blank"
             ><i class="bx bxl-twitter"></i
           ></a>
         </li>
         <li>
-          <a href="https://t.me/asarepok" class="tg" target="_blank"
+          <a href="https://t.me/asarepok" target="_blank"
             ><i class="bx bxl-telegram"></i
           ></a>
         </li>
         <li>
-          <a href="https://instagram.com/asarepok" class="ig" target="_blank"
+          <a href="https://instagram.com/asarepok" target="_blank"
             ><i class="bx bxl-instagram-alt"></i
           ></a>
         </li>
         <li>
-          <a
-            href="https://snapchat.com/add/asarepok"
-            class="snap"
-            target="_blank"
+          <a href="https://snapchat.com/add/asarepok" class="snap"
             ><i class="bx bxl-snapchat"></i
           ></a>
         </li>
