disabling npub field and fixing button height

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             type="text"
             value="npub1ran9mmw890vy9yfx7q2l8khmj28kvvy8rnk0q3x78m86vddvgsesyg9egk"
             id="npub"
+            disabled
           />
           <button onclick="copy()">
             <i class="bx bxs-copy"></i>
