added typeit js to the assets

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
+    <script src="/assets/index.umd.js"></script>
     <script src="/assets/main.js"></script>
     <link rel="stylesheet" href="/assets/main.css" />
   </head>
