updated npub field label text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </li>
       </ul>
       <div class="input-group">
-        <label for="npub">Below's my nostr public key</label>
+        <label for="npub">My nostr public key</label>
         <div class="input-field">
           <input
             type="text"
