updated intro text; added memoji avi

--- a/index.html
+++ b/index.html
@@ -4,25 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peter Asare :)</title>
+    <title>Home | peterasare.com</title>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script src="/assets/index.umd.js"></script>
     <script src="/assets/main.js"></script>
     <link rel="stylesheet" href="/assets/main.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/favicons/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="apple-touch-icon" href="assets/favicons/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="assets/favicons/apple-touch-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="assets/favicons/apple-touch-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="assets/favicons/apple-touch-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="assets/favicons/apple-touch-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="assets/favicons/apple-touch-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="assets/favicons/apple-touch-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="assets/favicons/apple-touch-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicons/apple-touch-icon-180x180.png"
+    />
   </head>
   <body>
     <main class="main">
-      <h1 id="intro"></h1>
+      <div class="intro">
+        <div class="avi">
+          <img src="assets/memoji.png" alt="ios memoji of Peter Asare" />
+        </div>
+        <h1 id="intro-name">Peter Asare♨️</h1>
+      </div>
       <p class="greeting">
-        Hey there! My website is currently under construction. Get in touch with
-        me via my socials.
+        Welcome! My website is presently under development. Contact me on one of
+        my social accounts.
       </p>
       <ul class="socials">
         <li>
-          <a href="https://t.me/asarepok" target="_blank"
+          <a href="https://t.me/asare" target="_blank"
             ><i class="bx bxl-telegram"></i
           ></a>
         </li>
@@ -43,8 +93,8 @@
           ></a>
         </li>
         <li>
-          <a href="https://snapchat.com/add/asarepok" class="snap"
-            ><i class="bx bxl-snapchat"></i
+          <a href="https://linkedin.com/in/peter-asare" target="_blank"
+            ><i class="bx bxl-linkedin-square"></i
           ></a>
         </li>
       </ul>
