--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <h1 id="intro-name">Peter Asare♨️</h1>
       </div>
       <p class="greeting">
-        Welcome! My website is presently under development. Contact me on one of
-        my social accounts.
+        Web developer from Ghana, get in touch via my socials.
       </p>
       <ul class="socials">
         <li>
