--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="avi">
           <img src="assets/memoji.png" alt="ios memoji of Peter Asare" />
         </div>
-        <h1 id="intro-name">Peter Asare♨️</h1>
+        <h1 id="intro-name">Peter Asare</h1>
       </div>
       <p class="greeting">
         Web developer from Ghana, get in touch via my socials.
